<resources>
    <string name="app_name">Sdu Store</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_title_text">Let\'s give a gift and treat!</string>
    <string name="start">Start</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="sdu_store">Sdu Store</string>
    <string name="big_text">The Right Address \n For Shopping\n Anyday</string>
    <string name="small_text">It\'s now easy to reach the best \n quality among the\n products internet</string>
    <string name="don_t_have_account_register">Don\'t have account? Register</string>
    <string name="don_t_have_account_log_in">Don\'t have account? Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="gmail">Gmail</string>
    <string name="facebook">Facebook</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="Last_Name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="home">home</string>
    <string name="favourite">favourite</string>
    <string name="profile">Profile</string>
    <string name="shop">shop</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>]

    <style name="web_id">112624020387-pd6lhmj2re55ub4nmve84qhg1fcgbep2.apps.googleusercontent.com</style>
</resources>