<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.authorization.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

        <TextView
            android:id="@+id/sduStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumTextViewThin"
            android:layout_marginTop="70dp"
            android:textStyle = "bold"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/g_blue"
            android:text="@string/sdu_store"/>
        <TextView
            android:id="@+id/letsLogin"
            style="@style/BigTextViewThin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/let_s_register"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/sduStore" />
        <TextView
            android:id="@+id/dontLogin"
            style="@style/MediumTextViewThin"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/don_t_have_account_log_in"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/letsLogin" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="52dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/dontLogin" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/edConfrimPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/edPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/RegisterBtn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/g_blue"
            android:padding="15dp"
            android:text="@string/Register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/edPassword"
            app:layout_constraintVertical_bias="0.362" />

        <ImageView
            android:id="@+id/login_facebook"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/RegisterBtn"
            android:src="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintStart_toEndOf="@id/login_facebook"
            app:layout_constraintTop_toTopOf="@id/login_facebook"
            app:layout_constraintBottom_toBottomOf="@id/login_facebook"
            android:layout_marginStart="5dp"
            />
        <ImageView
            android:id="@+id/login_gmail"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toEndOf="@id/text_facebook"
            app:layout_constraintTop_toBottomOf="@id/RegisterBtn"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            android:src="@drawable/icon_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/login_gmail"
            app:layout_constraintTop_toTopOf="@id/login_gmail"
            app:layout_constraintBottom_toBottomOf="@id/login_gmail"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>