<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.authorization.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />


        <TextView
            android:id="@+id/sduStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumTextViewThin"
            android:layout_marginTop="90dp"
            android:textStyle = "bold"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/g_blue"
            android:text="Sdu Store"/>

        <TextView
            android:id="@+id/letsLogin"
            style="@style/BigTextViewThin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Let's Login"
            android:fontFamily="@font/inter_medium"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/sduStore" />
        <TextView
            android:id="@+id/dontLogin"
            style="@style/MediumTextViewThin"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/don_t_have_account_register"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/letsLogin" />
        <EditText
            android:id="@+id/emaill"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/dontLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/emaill"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:hint="@string/password"

            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            style="@style/MediumTextViewThin"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/g_hint"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/RegisterBtn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/g_blue"
            android:padding="15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword"
            />
        <ImageView
            android:id="@+id/login_facebook"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/RegisterBtn"
            android:src="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintStart_toEndOf="@id/login_facebook"
            app:layout_constraintTop_toTopOf="@id/login_facebook"
            app:layout_constraintBottom_toBottomOf="@id/login_facebook"
            android:layout_marginStart="5dp"
            />
        <ImageView
            android:id="@+id/login_gmail"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toEndOf="@id/text_facebook"
            app:layout_constraintTop_toBottomOf="@id/RegisterBtn"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:src="@drawable/icon_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/login_gmail"
            app:layout_constraintTop_toTopOf="@id/login_gmail"
            app:layout_constraintBottom_toBottomOf="@id/login_gmail"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>